change touch direction, try to fix overflow bug on mobile

--- a/style.css
+++ b/style.css
@@ -6,7 +6,8 @@ body {
     background: black;
     text-shadow: 0 0 3px black;
 
-    overflow-x: hidden;
+    /*overflow-x: hidden;*/
+    overflow: hidden;
     overscroll-behavior: none;
 }
 
